added som fixme annotations

--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -19,18 +19,23 @@ Der grundsätzlicher Aufbau eines LC-Displays besteht aus folgenden Teilen (sieh
 Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen, auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht.
 %FIXME etwas besser beschreiben und evtl das bild rein? http://fluessigkristalle.com/fluessigkristallanzeigen-Dateien/image001.gif
 Flüssigkristall beschreibt somit eine “Schraubenstruktur”. Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird Polarisationsebene um 90 Grad gedreht und das Licht wird durchgelassen. Beim Anlegen von Spannung (ca. 3V Wechselspannung -> siehe Kapitel \ref{sec:elektronik}): Moleküle richten sich kollektiv senkrecht zu Elektroden aus, also existiert für das Polarisationslicht somit keine Schraubenstruktur mehr. Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: Bauanleitung und https://www.cmb-systeme.de/technikwissen/aufbau-und-funktion-einer-lcd-zelle)
+%FIXME fix quelle
 
 \subsection{Produktionsschritte}
 Schritt 1: Strukturierung der Elektroden, um Bereich, die leuchten sollen, abzudecken.\\
-Schritt 2: Wegätzen der beschichteten Bereiche, die nicht leuchten sollen (mit 3-5\% Salzsäure), sodass die braune Färbung der Glasplatten verschwindet.\\
+Schritt 2: Wegätzen der beschichteten Bereiche, die nicht leuchten sollen (mit 5\% Salzsäure), sodass die braune Färbung der Glasplatten verschwindet.\\
 Schritt 3: Entfernen der Abdeckschicht (Klebefolie, siehe Abschnitt \ref{subsec:klebefolie}), dabei werden Klebereste mit Aceton entfernt.\\
-Schritt 4: Oxidieren der Indium-Zinn-Schicht (im Ofen bei 300 Grad), damit die Glasplatten soweit wie möglich transparent erscheinen.\\
+Schritt 4: Oxidieren der Indium-Zinn-Schicht (im Ofen bei 250 Grad), damit die Glasplatten soweit wie möglich transparent erscheinen.\\
 Schritt 5: Reinigung der Glasplatten durch das Kochen dieser in einem im Verhältnis 1:5 verdünnten alkalischen tensidfreien Reinigungsbad 3 bis 5 Minuten, damit die Glasplatten komplett fettfrei werden. Dabei werden auch Siedesteinchen verwendet, um einen Siedeverzug zu vermeiden.\\
-Schritt 6: Orientierung der Glasoberfläche durch sogenanntes {\quote Reiborientieren}. Dabei wird je eine Oberfläche mit einem Zellstofftuch in eine bestimmte Richtung gerieben, sodass beide Oberflächen jeweils senkrecht zueinander ausgerichtet sind. \\
-Schritt 7: Zwischen den Glasplatten werden Abstandshalter (am Rand) eingelegt, damit diese sich später mit einem Abstand von ca. 10 bis 15 Mikrometer  gegenüberliegen. Hier einigt sich Folie von z.B. Zigarettenschachteln, weil diese eine Dicke von ca. 12 Mikrometer aufweist.\\
-Schritt 8: Die Glasplatten werden mit den Abstandshaltern übereinandergelegt. Dabei sollen sich die leitenden Seiten der Glasplatten gegenüberliegen. Danach werden zunächst sich zwei gegenüberliegenden Seiten der Glasplatten mit einem Zweikomponent-Kleber verklebt. Hierbei sollen die Glasplatten im Bereich der Abstandshalter zusammengepresst werden, um den Abstand zu bewahren, ansonsten zeigt die Zelle später eine langsamere elektrooptische Reaktion. \\
-Schritt 9: An einer der noch offenen Seiten wird nun der Flüssigkristall durch Kapillarwirkung eingefüllt. Es werden Tropfen des  Flüssigkristalls an die noch offene Kanten gesetzt, und der Flüssigkristall zieht selber in die Zelle ein. Anschließend werden die noch offenen Kanten mit dem Kleber verschlossen.	
+Schritt 6: Orientierung der Glasoberfläche durch sogenanntes {\quote Reiborientieren}. 
+%FIXME: hier entsteht eine neue Zeile - beabsichtigt?
+Dabei wird je eine Oberfläche mit einem Zellstofftuch in eine bestimmte Richtung gerieben, sodass beide Oberflächen jeweils senkrecht zueinander ausgerichtet sind. \\
+Schritt 7: Zwischen den Glasplatten werden Abstandshalter (am Rand) eingelegt, damit sich diese mit einem Abstand von ca. 10 bis 15 Mikrometer gegenüberliegen. Hier einigt sich Folie von z.B. Zigarettenschachteln, weil diese eine Dicke von ca. 12 Mikrometer aufweist.\\
+Schritt 8: Die Glasplatten werden mit den Abstandshaltern übereinandergelegt. Dabei sollen sich die leitenden Seiten der Glasplatten gegenüberliegen. Danach werden zunächst sich zwei gegenüberliegenden Seiten der Glasplatten mit einem Zweikomponent-Kleber verklebt. Hierbei sollen die Glasplatten im Bereich der Abstandshalter zusammengepresst werden, um den Abstand zu bewahren, ansonsten zeigt die Zelle später eine langsamere elektrooptische Reaktion
+%FIXME: ansonsten.... -> Quelle angeben
+Schritt 9: An einer der noch offenen Seiten wird nun der Flüssigkristall eingefüllt. Es werden Tropfen des  Flüssigkristalls an die noch offene Kanten gesetzt, und der Flüssigkristall zieht durch Kapillarkräfte selber in die Zelle ein. Anschließend werden die noch offenen Kanten mit dem Kleber verschlossen.	
 (Quelle: Bauanleitung)
+%FIXME -> quelle
 
 \subsection{Elektrodenstrukturaufbringung}
 \subsubsection*{Fotolack}
