added some fixme annotations

--- a/paper/Kapitel/bibliography.tex
+++ b/paper/Kapitel/bibliography.tex
@@ -11,7 +11,7 @@
 % set second argument of \begin to the number of references
 % (used to reserve space for the reference number labels box)
 \begin{thebibliography}{1}
-
+%FIXME letzter aufruf der webseiten hinzufügen
 \bibitem{lcdlayers}
 ed g2s
 \emph{LCD layers.svg}
