--- a/paper/Kapitel/ausblick.tex
+++ b/paper/Kapitel/ausblick.tex
@@ -4,7 +4,7 @@ Dieses Kapitel soll einen Ausblick geben, wie die Uhr verbessert und erweitert w
 
 \subsection{Verbesserungsmöglichkeiten}
 
-Um rechtzeitig die Batterie wechseln zu können, wäre eine Anzeige denkbar, die als Bild eine leere Batterie anzeigt. Mithilfe der Spannung der Batterie kann die Batterieladung bestimmt werden und ist ein Indikator, wann die Batterien gewechselt werden müssen.\\
+Um rechtzeitig die Batterien wechseln zu können, wäre eine Anzeige denkbar, die als Bild eine leere Batterie anzeigt. Mithilfe der Spannung der Batterie kann die Batterieladung bestimmt werden und ist ein Indikator, wann die Batterien gewechselt werden müssen.\\
 
 Des Weiteren ist denkbar, die Uhr um ein Funkuhrmodul zu erweitern, sodass die Uhrzeit nicht manuell eingestellt werden muss. Zusätzlich ist eine Weckfunktion denkbar.\\
 
