--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -18,17 +18,15 @@ Die Stromstärken haben wir mit einem Multimeter gemessen. Im Ruhezustand hat da
 	\centering
 	\caption{Stromfluss bei verschiedenen Spannungswerten und Anzeigen}
 	\label{my-label}
-	%\begin{tabular}{@{}lllll@{}}
 	\begin{tabular}{p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}}
-		\toprule
 		DC Spannung & großes Rechteck (\(22,5\times22,5\,\textrm{mm}\)) & kleine Rechtecke (\(10\times10\,\textrm{mm}\)) & Darth Vader & Walter White    \\
         {[}V{]} & {[}$\mu$A{]} & {[}$\mu$A{]} & {[}$\mu$A{]} & {[}$\mu$A{]} \\
-         \midrule
-		\multicolumn{1}{|l|}{10} & \multicolumn{1}{l|}{0,47}               & \multicolumn{1}{l|}{--}              & \multicolumn{1}{l|}{--}  & \multicolumn{1}{l|}{--}   \\ \midrule
-		\multicolumn{1}{|l|}{5}  & \multicolumn{1}{l|}{0,27}               & \multicolumn{1}{l|}{0,12}            & \multicolumn{1}{l|}{150} & \multicolumn{1}{l|}{0,02} \\ \midrule
-		\multicolumn{1}{|l|}{4}  & \multicolumn{1}{l|}{0,23}               & \multicolumn{1}{l|}{0,08}            & \multicolumn{1}{l|}{66}  & \multicolumn{1}{l|}{0,04} \\ \midrule
-		\multicolumn{1}{|l|}{3}  & \multicolumn{1}{l|}{0,18}               & \multicolumn{1}{l|}{0,07}            & \multicolumn{1}{l|}{37}  & \multicolumn{1}{l|}{0,03} \\ \midrule
-		\multicolumn{1}{|l|}{2}  & \multicolumn{1}{l|}{0,13}               & \multicolumn{1}{l|}{0,06}            & \multicolumn{1}{l|}{9}   & \multicolumn{1}{l|}{0,04} \\ \bottomrule
+         \hline
+		10 & 0,47 & -- & --  & --   \\ \hline
+		5  & 0,27 & 0,12 & 150 & 0,02 \\ \hline
+		4  & 0,23 & 0,08 & 66  & 0,04 \\ \hline
+		3  & 0,18 & 0,07 & 37  & 0,03 \\ \hline
+		2  & 0,13 & 0,06 & 9   & 0,04 \\
 	\end{tabular}
 	\label{tab:volt}
 \end{table}
@@ -36,7 +34,7 @@ Die Stromstärken haben wir mit einem Multimeter gemessen. Im Ruhezustand hat da
 Tabelle \ref{tab:volt} zeigt die Messungen der Stromstärken in Microampere der einzelnen Testanzeigedesigns bei einer angelegten Gleichspannung. Dies ist für einen Dauerbetrieb nicht zu empfehlen (siehe Abschnitt \ref{subsec:spannung}), wurde aber zur Vereinfachung der Messung so gewählt. Weshalb die Anzeige von “Darth Vader” so hohe Stromstärken aufweist ist uns (noch) unklar.
 
 \subsubsection{Frequenz}
-Zur Feststellung mit welcher Frequenz das LCD angesteuert werden sollte, haben wir eine Rechteckspannung mit verschiedenen Frequenzen an verschiedene Elektroden angelegt. Unter einer Frequenz von 30Hz fängt die Anzeige an zu flackern, da das menschliche Auge dort das Umschalten feststellen kann. Über einer Frequenz von 1MHz lässt die Intensität merklich nach. Um den Mikrocontroller möglichst stromsparend benutzen zu können, sollte aber eine möglichst geringe Frequenz verwendet werden.
+Zur Feststellung mit welcher Frequenz das LCD angesteuert werden sollte, haben wir eine Rechteckspannung mit verschiedenen Frequenzen an verschiedene Elektroden angelegt. Unter einer Frequenz von 30\,Hz fängt die Anzeige an zu flackern, da das menschliche Auge dort das Umschalten feststellen kann. Über einer Frequenz von 1\,MHz lässt die Intensität merklich nach. Um den Mikrocontroller möglichst stromsparend benutzen zu können, sollte aber eine möglichst geringe Frequenz verwendet werden.
 
 \subsubsection{Ansteuerungsart}
 Bisher wurden die Glasplatten nur einzeln angesteuert. Dadurch wären bei einem \(2\times4\) Aufbau 8 Anschlüsse an jeder Glasplatten nötig. Will man mehrere Symbole, z.B. \(4\times4\) anschließen, wären pro Glasplatte 16 Anschlüsse von Nöten. Um den Aufwand zu verringern, stehen 2 Möglichkeiten zur Verfügung: Zum einen kann auf die Glasplatte 1 die Elektrodenstruktur aufgebracht werden und jede Elektrode einzeln verbunden werden. Auf Glasplatte 2 muss dann nur eine gemeinsame Fläche für alle Anzeigesymbole angebracht werden, da nur die Symbole an der Stelle aufleuchten, an der sie auch auf Glasplatte 1 angesteuert werden. Eine weitere Möglichkeit ist die Ansteuerung per Multiplexverfahren. Hierbei müssen z.B. bei einer \(4\times4\) Platte nur 4 Anschlüsse pro Platte angebracht werden. Das verschafft mehr Platz für die Anschlüsse an der Glasplatte und die Fehlerwahrscheinlichkeit von unguter Kontaktierung wird verringert. Außerdem kann dadurch ein kleinerer Mikrocontroller eingesetzt werden, da weniger Ausgangspins benötigt werden. Dadurch steigen jedoch die Anforderungen an die Software. Wie die Platten dann an den Mikrokontroller angeschlossen werden steht im Abschnitt \ref{subsec:platine}.\\
