--- a/paper/Allgemeines/latexConfig.tex
+++ b/paper/Allgemeines/latexConfig.tex
@@ -6,6 +6,7 @@
 \usepackage{hyperref}
 \usepackage{booktabs}
 \usepackage{tabularx}
+\usepackage{subfigure}
 \ifCLASSINFOpdf
   \usepackage[pdftex]{graphicx}
   \DeclareGraphicsExtensions{.pdf,.jpeg,.png,.jpg}
