--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -95,3 +95,35 @@ Da dies das einzig funktionierende Verfahren ist, wird es zur Herstellung der Di
 2-K Kleber, Abstandhalter, Einfüllen des LCD
 \subsection{Anzeigefähigkeit}
 Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt diese sicher mit Spannung und sie können somit angezeigt werden. Die kleinste Struktur beim Strukturtest wird ohne Probleme angezeigt (Dicke 0,4mm). Der Grund dafür sind die scharfen Kanten, die durch den Folienplott erreicht werden können. Die Ausrichtung ist gut möglich, da die Struktur nach der Oxidierung der Glasplatten noch leicht, aber dennoch gut sichtbar ist. Komplexe Strukturen (Walter White, Darth Vader, Jürgen) können ebenso ohne Probleme angezeigt werden. Vermutlich könnten diese noch verkleinert werden und dennoch ohne Probleme angezeigt werden.
+
+\begin{figure}[]
+    \centering
+    %\subfigure[Caption]{   
+       % \includegraphics[width=0.22\textwidth]{./Bilder/Folie.jpg}
+    %}
+    %~ 
+    \subfigure[Aufbringen der Klebefolie]{  
+        \includegraphics[width=0.22\textwidth]{./Bilder/Schritt1.jpg}    
+    }
+    ~
+    \subfigure[Folie abziehen]{	
+   		\includegraphics[width=0.22\textwidth]{./Bilder/Schritt2.jpg}
+    }
+    ~
+     \subfigure[Entwickelte Glasscheibe]{
+   		\includegraphics[width=0.22\textwidth]{./Bilder/Schritt3.jpg}
+    }
+    ~
+      \subfigure[Orientierung der Moleküle durch Reiben]{
+   		\includegraphics[width=0.22\textwidth]{./Bilder/Reiborientierung.jpg}
+    }
+    ~
+      \subfigure[Kleben des Displays und Einführen des Flüssigkristalls]{
+   		\includegraphics[width=0.22\textwidth]{./Bilder/Fluessigkristall.jpg}
+    }
+    ~
+    \subfigure[Anbringen von Spannung]{
+		\includegraphics[width=0.22\textwidth]{./Bilder/DarthLeuchtet.jpg}
+	}
+    \caption{Produktionsschritte bei LCD-Herstellung}
+\end{figure}
