added some fixme annotations

--- a/paper/Kapitel/ausblick.tex
+++ b/paper/Kapitel/ausblick.tex
@@ -8,7 +8,7 @@ Um rechtzeitig die Batterien wechseln zu können, wäre eine Anzeige denkbar, di
 
 Des Weiteren ist denkbar, die Uhr um ein Funkuhrmodul zu erweitern, sodass die Uhrzeit nicht manuell eingestellt werden muss. Zusätzlich ist eine Weckfunktion denkbar.\\
 
-Motiviert durch ein Standardwecker mit LCD, kann ein DC-DC Spannunswandler eingesetzt werden, um die Uhr mit lediglich einer Batterie betreiben zu können. Somit besteht die Möglichkeit, die Größe der Uhr zu verkleinern.
+Motiviert durch ein Standardwecker mit LCD, kann ein DC-DC Spannungswandler eingesetzt werden, um die Uhr mit lediglich einer Batterie betreiben zu können. Somit besteht die Möglichkeit, die Größe der Uhr zu verkleinern.
 
 \subsection{Weitere Anwendungen}
 
