--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -47,19 +47,22 @@ Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad möglich, welch
   \label{testmuster}
 \end{figure}
 
-\begin{figure}[t]
-  \centering
-  \includegraphics[width=\linewidth, keepaspectratio]{Bilder/testmuster-seite1}
-  \caption{Testmuster (Anzeigen, Ausrichtungspunkte und Zuleitungen untere Seite)}
-  \label{testmuster-seite1}
-\end{figure}
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=\linewidth, keepaspectratio]{Bilder/testmuster-seite2}
-  \caption{Testmuster (Anzeigen, Ausrichtungspunkte und Zuleitungen obere Seite)}
+  \subfigure[Testmuster (Anzeigen, Ausrichtungspunkte und Zuleitungen untere Seite)]{
+  \includegraphics[width=0.22\textwidth, keepaspectratio]{./Bilder/testmuster-seite1.jpg}
+  \label{testmuster-seite1}
+}
+~
+\subfigure[Testmuster (Anzeigen, Ausrichtungspunkte und Zuleitungen obere Seite)]{
+  \includegraphics[width=0.22\textwidth, keepaspectratio]{./Bilder/testmuster-seite2.jpg}
   \label{testmuster-seite2}
-\end{figure}
+  }
+ \caption{Testmuster obere und untere Seite}
+ \end{figure}
+
+
 
 \subsection{Oxidierung der Glasplatten}
 
