Produktionsschritte Fotos erweitert

--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -106,7 +106,11 @@ Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt di
     %}
     %~ 
     \subfigure[Aufbringen der Klebefolie]{  
-        \includegraphics[width=0.22\textwidth]{./Bilder/Schritt1.jpg}    
+        \includegraphics[width=0.22\textwidth]{./Bilder/aufklebenDerFolie.jpg}    
+    }
+    ~
+     \subfigure[Ätzvorgang]{
+   		\includegraphics[width=0.22\textwidth]{./Bilder/aetzen.jpg}
     }
     ~
      \subfigure[Glasscheibe nach Ätzvorgang]{
@@ -117,15 +121,27 @@ Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt di
    		\includegraphics[width=0.22\textwidth]{./Bilder/Schritt2.jpg}
     }
     ~
+    \subfigure[Oxidieren der Glasplatten]{	
+   		\includegraphics[width=0.22\textwidth]{./Bilder/backenImOfen.jpg}
+    }
+     ~
+    \subfigure[Reinigen der Platten]{	
+   		\includegraphics[width=0.22\textwidth]{./Bilder/cleanenDerPlatten.jpg}
+    }
+    ~
       \subfigure[Orientierung der Moleküle durch Reiben]{
    		\includegraphics[width=0.22\textwidth]{./Bilder/Reiborientierung.jpg}
     }
     ~
-      \subfigure[Kleben des Displays und Einführen des Flüssigkristalls]{
-   		\includegraphics[width=0.22\textwidth]{./Bilder/Fluessigkristall.jpg}
+      \subfigure[Verkleben von zwei Seiten des Displays]{
+   		\includegraphics[width=0.22\textwidth]{./Bilder/verklebenDerPlatten.jpg}
     }
     ~
-    \subfigure[Anbringen von Spannung]{
+      \subfigure[Kleben des Displays und Einführen des Flüssigkristalls]{
+   		\includegraphics[width=0.22\textwidth]{./Bilder/liquidCeinfuegen.jpg}
+    }
+    ~
+    \subfigure[Anbringen von Polarisationsfolien und Anlegen von Spannung]{
 		\includegraphics[width=0.22\textwidth]{./Bilder/DarthLeuchtet.jpg}
 	}
     \caption{Produktionsschritte bei LCD-Herstellung}
