--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -117,7 +117,7 @@ Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt di
    		\includegraphics[width=0.22\textwidth]{./Bilder/Schritt3.jpg}
     }
     ~
-    \subfigure[Folie abziehen]{	
+    \subfigure[Abziehen der Folie]{	
    		\includegraphics[width=0.22\textwidth]{./Bilder/Schritt2.jpg}
     }
     ~
@@ -137,7 +137,7 @@ Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt di
    		\includegraphics[width=0.22\textwidth]{./Bilder/verklebenDerPlatten.jpg}
     }
     ~
-      \subfigure[Kleben des Displays und Einführen des Flüssigkristalls]{
+      \subfigure[Einführen des Flüssigkristalls und Verkleben der restlichen Seiten]{
    		\includegraphics[width=0.22\textwidth]{./Bilder/liquidCeinfuegen.jpg}
     }
     ~
