--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -51,12 +51,12 @@ Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad möglich, welch
 \begin{figure}[t]
   \centering
   \subfigure[Testmuster (Anzeigen, Ausrichtungspunkte und Zuleitungen untere Seite)]{
-  \includegraphics[width=0.22\textwidth, keepaspectratio]{./Bilder/testmuster-seite1.jpg}
+  \includegraphics[height=0.2\textwidth, keepaspectratio]{./Bilder/testmuster-seite1.jpg}
   \label{testmuster-seite1}
 }
 ~
 \subfigure[Testmuster (Anzeigen, Ausrichtungspunkte und Zuleitungen obere Seite)]{
-  \includegraphics[width=0.22\textwidth, keepaspectratio]{./Bilder/testmuster-seite2.jpg}
+  \includegraphics[width=0.2\textwidth, keepaspectratio]{./Bilder/testmuster-seite2.jpg}
   \label{testmuster-seite2}
   }
  \caption{Testmuster obere und untere Seite}
