--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -42,7 +42,7 @@ Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad möglich, welch
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=\linewidth, keepaspectratio]{Bilder/testmuster}
+  \includegraphics[width=0.5\linewidth, keepaspectratio]{Bilder/testmuster}
   \caption{Testmuster (Anzeigen und Ausrichtungspunkte)}
   \label{testmuster}
 \end{figure}
