minor fixed, picture added

--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -105,7 +105,7 @@ Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt di
        % \includegraphics[width=0.22\textwidth]{./Bilder/Folie.jpg}
     %}
     %~ 
-    \subfigure[Aufbringen der Klebefolie]{  
+    \subfigure[Übertragen der Klebefolie]{  
         \includegraphics[width=0.22\textwidth]{./Bilder/aufklebenDerFolie.jpg}    
     }
     ~
