--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -10,6 +10,7 @@
 \input{Kapitel/programmierung}
 \input{Kapitel/gehaeuse}
 \input{Kapitel/ausblick}
+\input{Kapitel/zusammenfassung}
 \input{Kapitel/dankesworte}
 \input{Kapitel/bibliography}
 
