--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -83,3 +83,17 @@ Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen. Das
 Das Platinenlayout wurde mit der kostenlosen Version von Eagle erstellt. Die Platine wurde komplett im FAUFablab geätzt und bestückt. Die Leiterbahndicke beträgt 16\,mil, der Abstand der Massefläche zu den Leiterbahnen beträgt ebenfalls 16\,mil. Die Bohrlochdurchmesser der Vias und Löcher zum aufstecken der Bauteile beträgt 0,9\,mm. Das Boardlayout wurde auf Papier im FAUFabLab ausgedruckt und auf die kupferbeschichtete Seite der Platine gelegt. Anschließend werden sie zusammen für 09:40\,min in den Belichter gelegt.  Wichtig ist, dass man die Platinen vor dem Belichten an den Rändern entgratet, um ein gutes Belichtungsergebnis zu erreichen. Zudem darf man nicht vergessen die Schutzfolie auf der Kupferseite die mit dem Fotolack beschichtet ist abzunehmen. Anschließend kommt die Platine in den Entwickler (NaOH) bis sich der Fotolack an den Stellen, an denen er mit UV-Licht belichtete wurde, ablöst. Nachdem die Platine gut mit Wasser abgespült ist, wird sie in das Ätzbad (Natriumpersulfatlösung) gelegt. Wenn sich die Kupferschicht zwischen den Leiterbahnen komplett abgelöst hat sollte die Platine entnommen werden. Belässt man sie zu lange im Ätzbad besteht die Gefahr, dass zusätzlich Leiterbahnen angeätzt werden. Anschließend die Platine gut mit Wasser abwaschen und für 1:30min in den Belichter legen. Dannach noch ein letztes mal entwickeln und gut abwaschen. Anschließend die Platine ins Verzinnungsbad (Bungard SurTin chemische Verzinnungslösung) geben, um die Kupferschicht vor Korrosion zu schützen. Nun können die Löcher bebohrt und die Platine bestückt werden.
 Wenn das Ätz- oder Verzinnungsbad zu alt ist kann dies zu schlechten Ergebnissen führen.
 Weitere Informationen zur Herstellung von Platinen und bis zu welcher Leiterbahndicke die Herstellung möglich ist gibt es auf der Homepage des FAUFabLab.
+
+\begin{figure}[t]
+  \centering
+  \includegraphics[width=0.5\linewidth, keepaspectratio]{Bilder/DIY shematic}
+  \caption{Schaltplan (erstellt mit Eagle)}
+  \label{shematic}
+\end{figure}
+
+\begin{figure}[t]
+  \centering
+  \includegraphics[width=0.5\linewidth, keepaspectratio]{Bilder/DIY board}
+  \caption{Platinenlayout (erstellt mit Eagle)}
+  \label{board}
+\end{figure}
