--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -16,28 +16,45 @@ Bei der Herstellung des Uhr soll wie folgt vorgegangen werden: Zuerst wird das L
 
 \subsection{Vorraussetzungen}
 %FIXME welche noch
-Für die Herstellung der Uhr werden folgende Werkzeuge Maschinen gebraucht:
+
+Dank des FAUFabLab standen uns diverse Maschinen und Werkzeuge zur Verfügung, die uns die Arbeit sehr erleichtert haben. Oft sind diese nicht in jedem privaten Haushalt zu finden, weshalb der Nachbau sich schwierig gestalten kann.
+Im Folgenden sind die verwendeten Werkzeuge aufgeführt:
+
 \begin{itemize}
 \item Folienplotter
+\item Heißluftfön
 \item Backofen
+\item Chemikaliengefäße (Schälchen und Glasgefäße)
+\item Heizfeld
+\item Pipetten
+\item Sämtliches Zubehör zur Platinenherstellung
+\item Lasercutter
 \item Multimeter
-\item Stromversorgung \(5\,\mathrm{V}\) AC
-
+\item Schere
+\item Lötkolben
+\item Seitenschneider
 \end{itemize}
+
+
 Folgende Materialien wurden verwendet:
+
 \begin{itemize}
-\item ITO beschichtete Glasplatten
-%FIXME wie viel (Menge)
+\item Indium-Zinn beschichtete Glasplatten (2 Stck. pro Display)
 \item Aceton
+\item Klebefolie für Schneideplotter
 \item 5\%-ige Salzsäue
+%FIXME Menge
 \item Siedesteinchen
+\item Reinigungskonzentrat (alkalisch, tensidfrei)
+%FIXME wie viel + welches
+\item Fusselfreie Tücher
+\item Abstandshalterbogen \(15\,\mathrm{\mu m}\)
+%FIXME Zigerattenfolien dazuschreiben? - in Anleitung dazuschreiben!
 \item Zweikomponentenkleber
 \item Nematische Weitbereichsmischung / Flüssigkristall
 %FIXME wie viel
-\item Reinigungskonzentrat
-%FIXME wie viel + welches
-\item Polarisationsfolie transparent
-\item 2 Polarisationsfolie (selbstklebend) mit Reflektor
-\item 1 Bogen Abstandshalter \(15\,\mathrm{\mu m}\)
-%FIXME Zigerattenfolien dazuschreiben?
+\item Polarisationsfolie selbstklebend, transparent
+\item Polarisationsfolie selbstklebend, mit Reflektor
+\item Zubehör zur Platinenherstellung
+\item Acryl
 \end{itemize}
