--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -86,14 +86,14 @@ Weitere Informationen zur Herstellung von Platinen und bis zu welcher Leiterbahn
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=0.5\linewidth, keepaspectratio]{Bilder/DIY shematic}
+  \includegraphics[width=0.5\linewidth, keepaspectratio]{Bilder/DIYShematic}
   \caption{Schaltplan (erstellt mit Eagle)}
   \label{shematic}
 \end{figure}
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=0.5\linewidth, keepaspectratio]{Bilder/DIY board}
+  \includegraphics[width=0.5\linewidth, keepaspectratio]{Bilder/DIYBoard}
   \caption{Platinenlayout (erstellt mit Eagle)}
   \label{board}
 \end{figure}
