--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -35,7 +35,7 @@ Schritt 9: An einer der noch offenen Seiten wird nun der Flüssigkristall durch 
 
 \subsection{Elektrodenstrukturaufbringung}
 
-In diesem Kapitel wird beschrieben, wie die gewünschten Strukturen auf die leitend beschichteten Glasplatten aufgebracht werden können. Hierfür kamen 3 Methoden in Betracht. Mittels eines fotosensitiven Lacks, Folien aus dem Folienplotter des FAUFabLab und per Tesa-Film oder Edding.
+In diesem Kapitel wird beschrieben, wie die gewünschten Strukturen auf die leitend beschichteten Glasplatten aufgebracht werden können. Hierfür kamen 3 Methoden in Betracht. Mittels eines fotosensitiven Lacks, Folien aus dem Folienplotter des FAUFabLab und per Tesa-Film oder Edding.\\
 
 \subsubsection*{Fotolack}
 
@@ -44,31 +44,35 @@ Bei Raumtemperatur muss der Lack für 24h an einem dunklen Ort trocknen. Die Gla
 Auf mehreren Platten wurde der Fotolack in verschiednene Arten aufgetragen. Zum einen wurde von 1 bis zu 5 aufgetragenen Schichten ein Test durchlaufen. Des weiteren wurden die Platten flach auf dem Boden liegend, sowie in einerm 30grad Winkel besprüht.
 Mit letzerer wurde das beste Ergebnis erzielt, da der Lack leicht nachlfließen konnte und sich somit am schönsten verteilt hat. Bei der Schichtdicke war es ausreichend eine einzelne Schicht aufzutragen.
 
-Nun werden die beschichteten Glasplatten in den Belichter gelegt und das Anzeigedesign, welches auf Papier ausgedruckt wurde, auf die beschitete Seite gelegt. Wie beim Belichten von Platinen ist eie Belichtungszeit von 9:40min zu wählen. Da es sich um Glasplatten handelt, auf denen von beiden Seiten Licht durchdringen kann, ist umbedingt darauf zu Achten ein Lichtundruchlässiges Objekt auf die nicht mit Fotolack beschictete Seite zu legen (z.B. eine schwarze Acrylplatte). Ansonsten wird die komplette Fotolackschicht belichtet. Anschließend wird der Fotolack entwickelt (NaOH, siehe Platine ätzen).
+Nun werden die beschichteten Glasplatten in den Belichter gelegt und das Anzeigedesign, welches auf Papier ausgedruckt wurde, auf die beschitete Seite gelegt. Wie beim Belichten von Platinen ist eie Belichtungszeit von 9:40min zu wählen. Da es sich um Glasplatten handelt, auf denen von beiden Seiten Licht durchdringen kann, ist umbedingt darauf zu Achten ein Lichtundruchlässiges Objekt auf die nicht mit Fotolack beschictete Seite zu legen (z.B. eine schwarze Acrylplatte). Ansonsten wird die komplette Fotolackschicht belichtet. Anschließend wird der Fotolack entwickelt (NaOH, siehe Platine ätzen).\\
 
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=\linewidth, keepaspectratio]{Bilder/Fotolackverfahrenbeschichtet}
+  \includegraphics[height=0.2\textwidth, keepaspectratio]{Bilder/Fotolackverfahrenbeschichtet}
   \caption{Mit Fotolack beschichtete Glasplatte}
   \label{Fotolackbeschichtete Glasplatte}
 \end{figure}
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=\linewidth, keepaspectratio]{Bilder/Fotolackverfahrengeaetzt}
+  \includegraphics[height=0.2\textwidth, keepaspectratio]{Bilder/Fotolackverfahrengeaetzt}
   \caption{Fotolackverfahren Aetzung}
   \label{Fotolackverfahren Aetzung}
 \end{figure}
 
 \subsubsection*{Klebefolie}\label{subsec:klebefolie}
-Muster werden entworfen und mit einem Plotter aus einer selbstklebenden Klebefolie ausgeschnitten. Das Muster wird auf einer Übertragungsfolie aufgebracht und auf die leitende Schicht der Glasplatten aufgeklebt, anschließend wird die Übertragungsfolie abgezogen. Nun sind alle Stellen, die später leuchten sollen, abgedeckt.
+Muster werden entworfen und mit einem Plotter aus einer selbstklebenden Klebefolie ausgeschnitten. Das Muster wird auf einer Übertragungsfolie aufgebracht und auf die leitende Schicht der Glasplatten aufgeklebt, anschließend wird die Übertragungsfolie abgezogen. Nun sind alle Stellen, die später leuchten sollen, abgedeckt.\\
+
 \subsubsection*{Edding/Tesa}
 Eine weitere Möglichkeit, die später zu leuchtende Stellen abzudecken, ist mit Hilfe von Tesa oder durch das direkte Aufmalen von Strukturen mit einem wasserfesten Edding. Diese Verfahren sind zwar einfacher, allerdings entstehen hierbei keine so scharfen Kanten wie durch eine Folie.
 
 \subsection{Ätzen der Struktur}
+\b{Sicherheitshinweis:} 
+Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
 
-Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts anzeigen soll die leitende Schicht weggeätzt werden. Hierbei stehen zwei Verfahren zur Auswahl.
+
+Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts anzeigen soll die leitende Schicht weggeätzt werden. Hierbei stehen zwei Verfahren zur Auswahl.\\
 
 \subsubsection*{Salzsäure}
 
@@ -106,6 +110,9 @@ Aufgrund der oben genannten Gründe haben wir das Verfahren mit Klebefolie und d
 
 \subsection{Oxidierung der Glasplatten}
 
+\b{Sicherheitshinweis:} 
+Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
+
 Die Oxidierung der Indium-Zinn Schicht der Glasplatten zu Indium-Zinn-Oxid kann auf mehrere Arten erreicht werden. Im Folgenden werden die Verfahren forgestellt und deren Einsetzbarkeit abgewogen.
 Indikatoren für eine gelungene Oxidierung sind:
 \begin{itemize}
@@ -114,6 +121,9 @@ Indikatoren für eine gelungene Oxidierung sind:
 \end{itemize}
 
 \subsubsection{Wasserstoffperoxid}
+
+\b{Sicherheitshinweis:} 
+Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
 
 Die Testplatte wurden in ein Wasserstoffperoxid-Bad gegeben und nach 1h wieder entnommen. Beide oben genannten Indikatoren haben nicht angesprochen, was darauf schließen lässt, dass der Oxidierungsversuch nicht erfolgreich war.
 Nun soll ein Langzeittest über mehrere Tage Erkentnisse geben, ob der Oxidierungsvorgang bei einer längeren Einwirkungsdauer funktioniert. Dies war nicht der Fall.
@@ -134,8 +144,33 @@ Beide Indikatoren haben angeschlagen was zeigt, dass die Oxidierung erfolgreich 
 Da dies das einzig funktionierende Verfahren ist, wird es zur Herstellung der Displays eingesetzt.
 
 \subsection{Ausrichtung der Glasplatten}
+
+Die Glasplatten müssen exakt übereinanderligen, sodass sich die Anzeigesymbole perfekt gegenüberliegen. Denn nur wo sie sich exakt gegenüber liegen, wird eine scharfe Anzeige möglich sein.
+Aus diesem Grund haben wir zuerst Punkte mit dem Folienplotter ausgeschnitten und auf die Glasplatten vor dem Oxidationsvorgang positioniert, denn dann ist die braune leitende Schicht noch gut sichtbar. Allerdings schmelzen dies Punkte ab, wenn man die Glasplatten zur Oxidierung in den Ofen gibt, weshalb diese Methode nicht empfehlenswert ist.
+Es hat sich erhausgestellt, dass die Oxidierung im Ofen die leitende Struktur nicht komplett durchsichtig macht. Deshalb ist eine extra Aufbringung von Ausrichtungspunkten ooder Ähnlichem nicht notwendig. Die Platten können ohne Probleme anhand der schwachen braunen Restfäbrung ausgerichtet werden.
+
+\subsection{Reinigung der Glasplatten}
+
+\b{Sicherheitshinweis:} 
+Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
+
+Im nächsten Schritt müssen die Glasplatten gereinigt werden, da jede Verunreinigung dazu führen kann, dass ungewollte Flecken entstehen.
+Das alkalische Reinigungsbad wird im Verhältnis 1:5 mit Wasser gemischt und anschließend in ein Gefäß gegeben, in dem die Glasplatten hineingelegt werden können (siehe Bild f). Wenn man die Platten jeweils mit der leitende Seite nach Außen zeigend einlegt, können beide gleichzeitig gereinigt werden. Um einen Siedeverzug zu verhindern ist es notwendig, dass Siedesteinchen eingelegt werden. Nachdem die Glasplatten in das Gefäß gelegt wurden kann die Flüßigkeit mit einem Heizfeld zum kochen gebracht. Die Glasplatten 5min im kochenden Wasser belassen und dann erst wieder etwas abkühlen lassen. Die Glasplatten vorsichtig entnehmen, da große Temperaturunterschiede diese zum Springen bringen können.
+Von nuna an sollte darauf geachtet werden, dass die sauberen Platten nicht wieder durch Fussel oder Feuchtigkeit verunreinigt werden.
+
+\subsection{Reiborientierung}
+
+Jetzt müssen die leitenden Schichten noch einer Reiborientierung unterzogen werden. Hierzu die mit einem fusselfreien Tuch abgetrockneten Glasplatten mit der leitenden Seite nach oben auf eine rutschfeste und harte Unterlage legen und mit einem fusselfreien Tuch mehrfach unter festem Druck in eine Richtung streichen (siehe Bild g). Glasplatte 1 muss genau um 90grad versetzt zur Glasplatte 2 orientiert werden.
+
 \subsection{Verkleben und befüllen}
-2-K Kleber, Abstandhalter, Einfüllen des LCD
+
+Nun die zugeschnittene Abstandhalterfolie auf die eine Glasplatte legen. Als Abstandhalterfolie kann die Folie einer gewöhnlichen Verpackung einer Zigarettenschatel verwendet werden. 
+Anschließend die zweite Glasplatte auflegen und zur Ersten ausrichten, dass die Anzeige Symbole so exakt wie möglich übereinander liegen. Glasplatten zusamendrücken und zwei gegenüberliegende Seiten mit 2-Komponentenkleber verkleben (siehe Bild H). Sobald dieser hart geworden ist kann mit der Befüllung mit des Flüssigkristalls begonnen werden.
+Nur sehr wenig Flüssigkristall mit einer Pipette entnehmen und an eine offene Seite auftragen. Druch den Kapillareffekt zieht dieser von selbst ein (siehe Bild i). Wenn das Display komplett vom Flüssigkristall durchzogen ist können die beiden noch offenen Seiten ebenfalls mit 2-Komponentenkleber verklebt werden.
+
+Die Abstandhalter in eine Richtung ausrichten, sodass kein Foliensterifen senkrecht zu einer anderen steht. Dadurch wird ein gutes einziehen des Flüsigkristalls gewährleistet. Querliegende Folienabschnitte verhindern einen zügigen und vollständigen Einzug.
+Außerdem sollte darauf geachtet werden, dass die Folien am Rand angebracht werden. Würde die Folie in die Mitte gelegt kann an diese Stelle kein Flüssigkristall gelangen und somit enstehen Flecken an diesen Stellen (siehe Bild j).
+
 \subsection{Anzeigefähigkeit}
 Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt diese sicher mit Spannung und sie können somit angezeigt werden. Die kleinste Struktur beim Strukturtest wird ohne Probleme angezeigt (Dicke 0,4mm). Der Grund dafür sind die scharfen Kanten, die durch den Folienplott erreicht werden können. Die Ausrichtung ist gut möglich, da die Struktur nach der Oxidierung der Glasplatten noch leicht, aber dennoch gut sichtbar ist. Komplexe Strukturen (Walter White, Darth Vader, Jürgen) können ebenso ohne Probleme angezeigt werden. Vermutlich könnten diese noch verkleinert werden und dennoch ohne Probleme angezeigt werden.
 
