--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -18,7 +18,7 @@ Bei der Herstellung des Uhr soll wie folgt vorgegangen werden: Zuerst wird das L
 %FIXME welche noch
 
 Dank des FAUFabLab standen uns diverse Maschinen und Werkzeuge zur Verfügung, die uns die Arbeit sehr erleichtert haben. Oft sind diese nicht in jedem privaten Haushalt zu finden, weshalb der Nachbau sich schwierig gestalten kann.
-Im Folgenden sind die verwendeten Werkzeuge aufgeführt:
+Im Folgenden sind die verwendeten Werkzeuge aufgeführt:\\
 
 \begin{itemize}
 \item Folienplotter
@@ -32,11 +32,12 @@ Im Folgenden sind die verwendeten Werkzeuge aufgeführt:
 \item Multimeter
 \item Schere
 \item Lötkolben
-\item Seitenschneider
+\item Seitenschneider\\
 \end{itemize}
 
 
-Folgende Materialien wurden verwendet:
+
+Folgende Materialien wurden verwendet:\\
 
 \begin{itemize}
 \item Indium-Zinn beschichtete Glasplatten (2 Stck. pro Display)
