--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -1,13 +1,12 @@
 \section{Elektronik}\label{sec:elektronik}
 \subsection{Ansteuerung}
 \subsubsection{Spannungsart}
-Das LCD Display sollte mit einer Rechteck-Wechselspannung angesteuert werden. Gleichspannung würde auf Dauer die Flüssigkristalle unwiederherstellbar zerstören und den Display somit unbrauchbar machen.
+Das LCD Display sollte mit einer Rechteck-Wechselspannung angesteuert werden. Gleichspannung würde auf Dauer die Flüssigkristalle unwiederherstellbar zerstören und den Display somit unbrauchbar machen.\\
 \subsubsection{Spannungshöhe}\label{subsec:spannung}
-Hierbei gibt es zwei ausschlaggebende Kriterien:
+Es zwei ausschlaggebende Kriterien:
 \begin{itemize}
-\item Welche Spannung ist nötig um ein schönes Bild zu erhalten.
-%FIXME schönes ist ein subjekives wort
-\item Bei welcher Spannung zieht das Display wie viel Stromstärke, um einen möglichst geringe Leistung zu erhalten.
+\item Minimale Spannung, dass ein gut sichtbares Bild resultiert
+\item Spannung, bei der eine möglichst geringer Strom fließt\\
 \end{itemize}
 
 Unter einer Rechteck-Wechselspannung von 2\,V wird die Anzeige zu schwach, um klar etwas zu erkennen. Mit steigender Spannung nimmt nur die Schnelligkeit zu, mit der das Anzeigefeld angezeigt wird, die Intensität nimmt nicht weiter zu. Ab einer Spannung von 6V besteht die Gefahr, dass auch benachbarte Felder aufleuchten. So wurde bei unserem Testdesign {\quote Darth Vader} auf Platte 1 und die {\quote kleinen Rechtecken} auf Platte 2 angeschlossen. Die kleinen Rechtecken haben aufgeleuchtet.\\
@@ -31,10 +30,10 @@ Die Stromstärken haben wir mit einem Multimeter gemessen. Im Ruhezustand hat da
 	\label{tab:volt}
 \end{table}
 
-Tabelle \ref{tab:volt} zeigt die Messungen der Stromstärken in Microampere der einzelnen Testanzeigedesigns bei einer angelegten Gleichspannung. Dies ist für einen Dauerbetrieb nicht zu empfehlen (siehe Abschnitt \ref{subsec:spannung}), wurde aber zur Vereinfachung der Messung so gewählt. Weshalb die Anzeige von “Darth Vader” so hohe Stromstärken aufweist ist uns (noch) unklar.
+Tabelle \ref{tab:volt} zeigt die Messungen der Stromstärken in Microampere der einzelnen Testanzeigedesigns bei einer angelegten Gleichspannung. Dies ist für einen Dauerbetrieb nicht zu empfehlen (siehe Abschnitt \ref{subsec:spannung}), wurde aber zur Vereinfachung der Messung so gewählt. Weshalb die Anzeige von “Darth Vader” so hohe Stromstärken aufweist ist uns (noch) unklar.\\
 
 \subsubsection{Frequenz}
-Zur Feststellung mit welcher Frequenz das LCD angesteuert werden sollte, haben wir eine Rechteckspannung mit verschiedenen Frequenzen an verschiedene Elektroden angelegt. Unter einer Frequenz von 30\,Hz fängt die Anzeige an zu flackern, da das menschliche Auge dort das Umschalten feststellen kann. Über einer Frequenz von 1\,MHz lässt die Intensität merklich nach. Um den Mikrocontroller möglichst stromsparend benutzen zu können, sollte aber eine möglichst geringe Frequenz verwendet werden.
+Zur Feststellung mit welcher Frequenz das LCD angesteuert werden sollte, haben wir eine Rechteckspannung mit verschiedenen Frequenzen an verschiedene Elektroden angelegt. Unter einer Frequenz von 30\,Hz fängt die Anzeige an zu flackern, da das menschliche Auge dort das Umschalten feststellen kann. Über einer Frequenz von 1\,MHz lässt die Intensität merklich nach. Um den Mikrocontroller möglichst stromsparend benutzen zu können, sollte aber eine möglichst geringe Frequenz verwendet werden.\\
 
 \subsubsection{Ansteuerungsart}
 Bisher wurden die Glasplatten nur einzeln angesteuert. Dadurch wären bei einem \(2\times4\) Aufbau 8 Anschlüsse an jeder Glasplatten nötig. Will man mehrere Symbole, z.B. \(4\times4\) anschließen, wären pro Glasplatte 16 Anschlüsse von Nöten. Um den Aufwand zu verringern, stehen 2 Möglichkeiten zur Verfügung: Zum einen kann auf die Glasplatte 1 die Elektrodenstruktur aufgebracht werden und jede Elektrode einzeln verbunden werden. Auf Glasplatte 2 muss dann nur eine gemeinsame Fläche für alle Anzeigesymbole angebracht werden, da nur die Symbole an der Stelle aufleuchten, an der sie auch auf Glasplatte 1 angesteuert werden. Eine weitere Möglichkeit ist die Ansteuerung per Multiplexverfahren. Hierbei müssen z.B. bei einer \(4\times4\) Platte nur 4 Anschlüsse pro Platte angebracht werden. Das verschafft mehr Platz für die Anschlüsse an der Glasplatte und die Fehlerwahrscheinlichkeit von unguter Kontaktierung wird verringert. Außerdem kann dadurch ein kleinerer Mikrocontroller eingesetzt werden, da weniger Ausgangspins benötigt werden. Dadurch steigen jedoch die Anforderungen an die Software. Wie die Platten dann an den Mikrokontroller angeschlossen werden steht im Abschnitt \ref{subsec:platine}.\\
@@ -45,35 +44,35 @@ Zusammenfassend sind also folgende Ansteuerparameter optimal für die Ansteuerun
 \begin{itemize}
 \item Rechteckspannung von \(-3\,\textrm{V}\) bis \(3\,\textrm{V}\)
 \item Frequenz \(50\,\textrm{Hz}\)
-\item Multiplexverfahren
+\item Multiplexverfahren\\
 \end{itemize}
 
 \subsection{Spannungsversorgung}
-Als Spannungsversorgung könnten somit 2 Standard Batterien mit je \(1,5\,\textrm{V}\) verwendet werden. Diese sinken durch Entladung auf eine Mindestspannung von \(0,9\,\textrm{V}\) ab. Dadurch wird die Anzeige nicht bis zur vollen Entladung der Batterien halten. Je nach Wahl des Mikrocontroller kommt dieser auch nicht mit \(1,8\,\textrm{V}\) Spannung aus. Deshalb haben wir uns entschieden drei Batterien mit je \(1,5\,\textrm{V}\) einzusetzen.
+Als Spannungsversorgung könnten somit 2 Standard Batterien mit je \(1,5\,\textrm{V}\) verwendet werden. Diese sinken durch Entladung auf eine Mindestspannung von \(0,9\,\textrm{V}\) ab. Dadurch wird die Anzeige nicht bis zur vollen Entladung der Batterien halten. Je nach Wahl des Mikrocontroller kommt dieser auch nicht mit \(1,8\,\textrm{V}\) Spannung aus. Deshalb haben wir uns entschieden drei Batterien mit je \(1,5\,\textrm{V}\) einzusetzen.\\
 
 \subsection{Anbindung}
-Um das LCD Display mit der Ansteuerplatine zu verbinden gibt es mehrere Möglichkeiten. Da nur ein sehr geringer Strom (\(\mu A\)) fließt und eine Spannung von \(3\,\textrm{V}\) angelegt wird ist nur eine dünne Drahtzuleitung (\(0,5\, mm^2\)) von Nöten. Im folgenden werden verschiedene Verfahren erklärt, die wir uns überlegt und zum Teil auch ausprobiert haben.
+Um das LCD Display mit der Ansteuerplatine zu verbinden gibt es mehrere Möglichkeiten. Da nur ein sehr geringer Strom (\(\mu A\)) fließt und eine Spannung von \(3\,\textrm{V}\) angelegt wird ist nur eine dünne Drahtzuleitung (\(0,5\, mm^2\)) von Nöten. Im folgenden werden verschiedene Verfahren erklärt, die wir uns überlegt und zum Teil auch ausprobiert haben.\\
 
 \subsubsection{Klemmen}
-Im ersten Test wurde das Display über Klemmen angesteuert. Dies hat einwandfrei funktioniert, jedoch beschädigen die Klemmen die Glasplatten und stellen somit keine gute Endlösung dar.
+Im ersten Test wurde das Display über Klemmen angesteuert. Dies hat einwandfrei funktioniert, jedoch beschädigen die Klemmen die Glasplatten und stellen somit keine gute Endlösung dar.\\
 
 \subsubsection{Conductive Paint}
-Conductive Paint ist eine schwarze leitfähige Farbe die von der Firma bareconductive hergestellt wird. Die Flüssigkeit kommt aus der Tube und braucht circa 15 Minuten zum Trocknen. Jedoch ist die Festigkeit zu schwach und kann die Drähte nicht fest an den Glasplatten fixieren. Deshalb muss noch eine zusätzliche Schicht Kleber (2-Komponentenkleber, Sekundenkleber) darüber angebracht werden, um die Festigkeit zu steigern.
+Conductive Paint ist eine schwarze leitfähige Farbe die von der Firma bareconductive hergestellt wird. Die Flüssigkeit kommt aus der Tube und braucht circa 15 Minuten zum Trocknen. Jedoch ist die Festigkeit zu schwach und kann die Drähte nicht fest an den Glasplatten fixieren. Deshalb muss noch eine zusätzliche Schicht Kleber (2-Komponentenkleber, Sekundenkleber) darüber angebracht werden, um die Festigkeit zu steigern.\\
 
 \subsubsection{Kupferfolie}
-Kupferfolie wäre eine weitere Idee, die wir allerdings noch nicht ausprobiert haben.
+Kupferfolie wäre eine weitere Idee, die wir allerdings noch nicht ausprobiert haben.\\
 
 
 \subsection{Platine}
 
 \subsubsection{Anforderungen}
-Die Platine dienst zur Ansteuerung des LCD und soll es ermöglichen, die Uhr zu stellen und die richtige Uhrzeit anzuzeigen. Es soll die Möglichkeit geben das Display nicht nur im BCD Format zu betreiben, sondern auch in anderen Formaten, wie z.B. rein binär.
+Die Platine dienst zur Ansteuerung des LCD und soll es ermöglichen, die Uhr zu stellen und die richtige Uhrzeit anzuzeigen. Es soll die Möglichkeit geben das Display nicht nur im BCD Format zu betreiben, sondern auch in anderen Formaten, wie z.B. rein binär.\\
 
 \subsubsection{Wahl des Mikrocontrollers}
-Der Mikrocontroller muss mind. 2 Eingänge für 2 Taster zur Uhrzeitstellung zur Verfügung stellen. Des Weiteren werden 4 weitere Pins für den Anschluss der ISP Schnittstelle zum Programmieren des Mikrocontrollers benötigt. Je nach Anzahl der anzuzeigenden Symbole und ob das Multiplexverfahren verwendet wird oder nicht,  sind noch zustätzliche Ausgänge nötig. Wenn man den Mikrocontroller der Atmel-Reihe verwendet, ist des Weiteren auf die Endbezeichnung {\quote P} zu achten, da der Mikrocontroller dann stromsparender ist. Außerdem muss der Versorgungsspannungsbereich in dem von der Batterie zur Verfügung gestelltem Bereich liegen.
+Der Mikrocontroller muss mind. 2 Eingänge für 2 Taster zur Uhrzeitstellung zur Verfügung stellen. Des Weiteren werden 4 weitere Pins für den Anschluss der ISP Schnittstelle zum Programmieren des Mikrocontrollers benötigt. Je nach Anzahl der anzuzeigenden Symbole und ob das Multiplexverfahren verwendet wird oder nicht,  sind noch zustätzliche Ausgänge nötig. Wenn man den Mikrocontroller der Atmel-Reihe verwendet, ist des Weiteren auf die Endbezeichnung {\quote P} zu achten, da der Mikrocontroller dann stromsparender ist. Außerdem muss der Versorgungsspannungsbereich in dem von der Batterie zur Verfügung gestelltem Bereich liegen.\\
 
 \subsubsection{Wahl der anderen Bauteile}
-Um die Uhrzeit so exakt wie möglich zu erhalten, wurde eine spezieller 32,7\,kHz Quartz verwendet, der auf Uhrenandwendungen spezialisiert ist. Bis auf den Mikrokontroller und dem Quartz wurden nur SMD Bauteile verwendet, um die Platine zu einem späteren Zeitpunkt komplett auf SMD Bauteile umstellen zu können. Zum Entprellen der Taster wurde jeweils ein 100\,nF Kondensator parallel geschlossen. Der Eingang der Spannungsversorgung (VCC, AVCC) wurde ebenfalls mit je einem 100\,nF Kondensator versehen, um eine stabile Eingangsspannung zu gewährleisten. Der Pin Aref wurde über einen Kondensator mit 100\,nF auf Masse gezogen. Dieser Kontakt kann dazu genutzt werden, um den Batteriestand festzustellen. Für die SMD Bauteile wurde eine Größe von 0805 gewählt.
+Um die Uhrzeit so exakt wie möglich zu erhalten, wurde eine spezieller 32,7\,kHz Quartz verwendet, der auf Uhrenandwendungen spezialisiert ist. Bis auf den Mikrokontroller und dem Quartz wurden nur SMD Bauteile verwendet, um die Platine zu einem späteren Zeitpunkt komplett auf SMD Bauteile umstellen zu können. Zum Entprellen der Taster wurde jeweils ein 100\,nF Kondensator parallel geschlossen. Der Eingang der Spannungsversorgung (VCC, AVCC) wurde ebenfalls mit je einem 100\,nF Kondensator versehen, um eine stabile Eingangsspannung zu gewährleisten. Der Pin Aref wurde über einen Kondensator mit 100\,nF auf Masse gezogen. Dieser Kontakt kann dazu genutzt werden, um den Batteriestand festzustellen. Für die SMD Bauteile wurde eine Größe von 0805 gewählt.\\
 
 \subsubsection{Herstellung der Platine}
 \b{Sicherheitshinweis:} 
@@ -86,14 +85,14 @@ Weitere Informationen zur Herstellung von Platinen und bis zu welcher Leiterbahn
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=0.5\linewidth, keepaspectratio]{Bilder/DIYShematic}
+  \includegraphics[width=1\linewidth, keepaspectratio]{Bilder/DIYShematic}
   \caption{Schaltplan (erstellt mit Eagle)}
   \label{shematic}
 \end{figure}
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=0.5\linewidth, keepaspectratio]{Bilder/DIYBoard}
+  \includegraphics[angle=90, width=0.5\linewidth, keepaspectratio]{Bilder/DIYBoard}
   \caption{Platinenlayout (erstellt mit Eagle)}
   \label{board}
 \end{figure}
